{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 452,
  "lineage": "e51fd9a9-5105-c145-16c2-c9ed928ecee8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:112146875010:listener/app/lamp-alb/138f8d7b9069c8a0/808e879bcb9eb0ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:112146875010:targetgroup/lamp-alb-target/f9f697fc5cc24517",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:112146875010:listener/app/lamp-alb/138f8d7b9069c8a0/808e879bcb9eb0ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:112146875010:loadbalancer/app/lamp-alb/138f8d7b9069c8a0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.lamptg",
            "aws_lb.lampalb",
            "aws_security_group.lbsg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lamptg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:112146875010:targetgroup/lamp-alb-target/f9f697fc5cc24517",
            "arn_suffix": "targetgroup/lamp-alb-target/f9f697fc5cc24517",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:112146875010:targetgroup/lamp-alb-target/f9f697fc5cc24517",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lamp-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "defaultnacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:network-acl/acl-099150f6bbfca3786",
            "default_network_acl_id": "acl-099150f6bbfca3786",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-099150f6bbfca3786",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "112146875010",
            "subnet_ids": [
              "subnet-04795f8edf5c6c21a",
              "subnet-0530885265ad88aaa",
              "subnet-083ebf9b6aa3a10ef",
              "subnet-0ab369e687ab85f5a"
            ],
            "tags": {
              "Name": "defaultroute-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "defaultroute-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "defaultroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:route-table/rtb-0d0f9e1ea3e46b103",
            "default_route_table_id": "rtb-0d0f9e1ea3e46b103",
            "id": "rtb-0d0f9e1ea3e46b103",
            "owner_id": "112146875010",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "defaultroute-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "defaultroute-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "defaultsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:security-group/sg-0f5d093b9b86b2ae3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f5d093b9b86b2ae3",
            "ingress": [],
            "name": "default",
            "owner_id": "112146875010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "defaultsg-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "defaultsg-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lampsetup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d1e544b84bf7502",
            "arn": "arn:aws:ec2:us-east-2:112146875010:instance/i-0ba0f54ba5642c648",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba0f54ba5642c648",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hakp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0027fd7a6609004f0",
            "private_dns": "ip-172-31-31-44.us-east-2.compute.internal",
            "private_ip": "172.31.31.44",
            "public_ip": "18.222.118.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:112146875010:key/338a4e13-9fc8-4b10-b4b6-f5fea9680283",
                "tags": {
                  "Name": "rootVolume-0-default",
                  "business_unit": "application_dev",
                  "company_name": "myCompany",
                  "support_email": "support@example.com"
                },
                "throughput": 0,
                "volume_id": "vol-0fb1249304623c426",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0530885265ad88aaa",
            "tags": {
              "Name": "Lamp-0-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "Lamp-0-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099a7ad426c4a89e1"
            ]
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d1e544b84bf7502",
            "arn": "arn:aws:ec2:us-east-2:112146875010:instance/i-0d10f5ac77001b500",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d10f5ac77001b500",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hakp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3071d0202c62b47",
            "private_dns": "ip-172-31-96-166.us-east-2.compute.internal",
            "private_ip": "172.31.96.166",
            "public_ip": "18.191.121.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:112146875010:key/338a4e13-9fc8-4b10-b4b6-f5fea9680283",
                "tags": {
                  "Name": "rootVolume-1-default",
                  "business_unit": "application_dev",
                  "company_name": "myCompany",
                  "support_email": "support@example.com"
                },
                "throughput": 0,
                "volume_id": "vol-0f38204176eef00b4",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083ebf9b6aa3a10ef",
            "tags": {
              "Name": "Lamp-1-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "Lamp-1-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099a7ad426c4a89e1"
            ]
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:internet-gateway/igw-0de8768121c113e85",
            "id": "igw-0de8768121c113e85",
            "owner_id": "112146875010",
            "tags": {
              "Name": "ig-lamp-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "ig-lamp-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lampalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:112146875010:loadbalancer/app/lamp-alb/138f8d7b9069c8a0",
            "arn_suffix": "app/lamp-alb/138f8d7b9069c8a0",
            "dns_name": "lamp-alb-1684539103.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:112146875010:loadbalancer/app/lamp-alb/138f8d7b9069c8a0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lamp-alb",
            "security_groups": [
              "sg-007a3ad26585be9fd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0530885265ad88aaa"
              },
              {
                "subnet_id": "subnet-083ebf9b6aa3a10ef"
              }
            ],
            "subnets": [
              "subnet-0530885265ad88aaa",
              "subnet-083ebf9b6aa3a10ef"
            ],
            "tags": {
              "Name": "alb-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "alb-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ipattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:112146875010:targetgroup/lamp-alb-target/f9f697fc5cc24517-20220628142327429500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:112146875010:targetgroup/lamp-alb-target/f9f697fc5cc24517",
            "target_id": "i-0ba0f54ba5642c648"
          },
          "dependencies": [
            "aws_alb_target_group.lamptg",
            "aws_instance.lampsetup",
            "aws_security_group.websg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:112146875010:targetgroup/lamp-alb-target/f9f697fc5cc24517-20220628142327461900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:112146875010:targetgroup/lamp-alb-target/f9f697fc5cc24517",
            "target_id": "i-0d10f5ac77001b500"
          },
          "dependencies": [
            "aws_alb_target_group.lamptg",
            "aws_instance.lampsetup",
            "aws_security_group.websg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de8768121c113e85",
            "id": "r-rtb-031185abdf39b8eef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031185abdf39b8eef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.webroute",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dbroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:route-table/rtb-0688dc7fbd4e7a895",
            "id": "rtb-0688dc7fbd4e7a895",
            "owner_id": "112146875010",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dbroute-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "dbroute-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:route-table/rtb-031185abdf39b8eef",
            "id": "rtb-031185abdf39b8eef",
            "owner_id": "112146875010",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "webroute-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "webroute-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_db_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03068f233c7e7b698",
            "route_table_id": "rtb-0688dc7fbd4e7a895",
            "subnet_id": "subnet-04795f8edf5c6c21a"
          },
          "dependencies": [
            "aws_route_table.dbroute",
            "aws_subnet.dbsubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c704ceea81a825e",
            "route_table_id": "rtb-0688dc7fbd4e7a895",
            "subnet_id": "subnet-0ab369e687ab85f5a"
          },
          "dependencies": [
            "aws_route_table.dbroute",
            "aws_subnet.dbsubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_web_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dd9b143897455fe",
            "route_table_id": "rtb-031185abdf39b8eef",
            "subnet_id": "subnet-0530885265ad88aaa"
          },
          "dependencies": [
            "aws_route_table.webroute",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf6faba059b3ae8e",
            "route_table_id": "rtb-031185abdf39b8eef",
            "subnet_id": "subnet-083ebf9b6aa3a10ef"
          },
          "dependencies": [
            "aws_route_table.webroute",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:security-group/sg-0c1ae6056ecc75749",
            "description": "controls access to the LB",
            "egress": [],
            "id": "sg-0c1ae6056ecc75749",
            "ingress": [],
            "name": "dbsg-default",
            "name_prefix": "",
            "owner_id": "112146875010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dbsg-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "dbsg-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:security-group/sg-007a3ad26585be9fd",
            "description": "controls access to the LB",
            "egress": [],
            "id": "sg-007a3ad26585be9fd",
            "ingress": [],
            "name": "lbsg-default",
            "name_prefix": "",
            "owner_id": "112146875010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lbsg-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "lbsg-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:security-group/sg-099a7ad426c4a89e1",
            "description": "controls access to the LB",
            "egress": [],
            "id": "sg-099a7ad426c4a89e1",
            "ingress": [],
            "name": "websg-default",
            "name_prefix": "",
            "owner_id": "112146875010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websg-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "websg-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-526506943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c1ae6056ecc75749",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dbsg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "debuglaptop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1915041012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-099a7ad426c4a89e1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1360506131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-099a7ad426c4a89e1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4281776499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-007a3ad26585be9fd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_to_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-475171201",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-099a7ad426c4a89e1",
            "self": false,
            "source_security_group_id": "sg-007a3ad26585be9fd",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3299830081",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-099a7ad426c4a89e1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3498723834",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-099a7ad426c4a89e1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-398725916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1ae6056ecc75749",
            "self": false,
            "source_security_group_id": "sg-099a7ad426c4a89e1",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dbsg",
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_to_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1958148871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007a3ad26585be9fd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:subnet/subnet-04795f8edf5c6c21a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.128.0/18",
            "id": "subnet-04795f8edf5c6c21a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112146875010",
            "tags": {
              "Name": "db-subnet-0-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "db-subnet-0-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:subnet/subnet-0ab369e687ab85f5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.192.0/18",
            "id": "subnet-0ab369e687ab85f5a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112146875010",
            "tags": {
              "Name": "db-subnet-1-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "db-subnet-1-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "websubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:subnet/subnet-0530885265ad88aaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/18",
            "id": "subnet-0530885265ad88aaa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112146875010",
            "tags": {
              "Name": "web-subnet-0-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "web-subnet-0-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:subnet/subnet-083ebf9b6aa3a10ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.64.0/18",
            "id": "subnet-083ebf9b6aa3a10ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112146875010",
            "tags": {
              "Name": "web-subnet-1-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "web-subnet-1-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "vpc_id": "vpc-0843167b60884adb8"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lamp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:112146875010:vpc/vpc-0843167b60884adb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-099150f6bbfca3786",
            "default_route_table_id": "rtb-0d0f9e1ea3e46b103",
            "default_security_group_id": "sg-0f5d093b9b86b2ae3",
            "dhcp_options_id": "dopt-6fda6204",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0843167b60884adb8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d0f9e1ea3e46b103",
            "owner_id": "112146875010",
            "tags": {
              "Name": "lamp-vpc-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            },
            "tags_all": {
              "Name": "lamp-vpc-default",
              "business_unit": "application_dev",
              "company_name": "myCompany",
              "support_email": "support@example.com"
            }
          }
        }
      ]
    }
  ]
}